--- a/content/post/R1D8.md
+++ b/content/post/R1D8.md
@@ -1,21 +1,61 @@
 ---
 title: "R1D8"
-subtitle: "Travaux envisagés"
+subtitle: "FreeCodeCamp. Apprentissage de Bootstrap"
 date: 2017-07-31T03:24:03+02:00
 lastmod: "2017-07-01T07:25:03+02:00"
 draft: false
-tags: [date,indieweb]
+tags: [bootstrap, date]
 bigimg: [{src: "/img/path.jpg", desc: "Sur la Route"}]
 ---
 
-### Dates en français
+### 1. FreeCodeCamp Responsive Design Bootstrap 
+
+- Terminé le tutoriel freecodecamp [Bootstrap Responsive Design](https://www.freecodecamp.org/map#nested-collapseResponsiveDesignwithBootstrap). 
+- Prochaine étape : [construire une page d'hommage](https://www.freecodecamp.org/challenges/build-a-tribute-page)) en pur HTML/Bootstrap (pas de CSS)
+
+#### Essai jQuery et target 
+<script>
+  $(document).ready(function() {
+    $("button").addClass("animated bounce");
+    $(".well").addClass("animated shake");
+    $("#target3").addClass("animated fadeOut");
+    $("button").removeClass("btn-default");
+
+  });
+</script>
+
+<!-- Only change code above this line. -->
+
+<div class="container-fluid">
+  <h3 class="text-primary">Aire de jeu jQuery</h3>
+  <div class="row">
+    <div class="col-xs-6">
+      <h4>#left-well</h4>
+      <div class="well" id="left-well">
+        <button class="btn btn-default target" id="target1">#target1</button>
+        <button class="btn btn-default target" id="target2">#target2</button>
+        <button class="btn btn-default target" id="target3">#target3</button>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <h4>#right-well</h4>
+      <div class="well" id="right-well">
+        <button class="btn btn-default target" id="target4">#target4</button>
+        <button class="btn btn-default target" id="target5">#target5</button>
+        <button class="btn btn-default target" id="target6">#target6</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+### 2. Travaux : dates et structure de dossiers
+#### 21. Dates en français
 
 Demain c'est le "**1er** août". 
-Poursuite de la mise en forme de la date et avancées sur IndieMark.
+Poursuite de la mise en forme de la date.
 <!--more--> 
 [Ajouter le suffixe 1er](https://discourse.gohugo.io/t/formatting-a-date-with-suffix-2nd/5701) 
-
-
 
 ```
 {{ .Date.Format "2" }}
@@ -33,11 +73,15 @@ Modification d'un appel de date le layout 'list.html' et modification du partiel
 </a>
 ```
 
-### Progression sur IndieMark
+#### 22. IndieMark
 
-L'IndieMark Niveau 1 c'est posséder son propre domaine pour se connecter et publier des posts. ([Référence IndieMark Niveau 1](https://indieweb.org/IndieMark#Level_1))
+L'*IndieMark Niveau 1* c'est posséder son propre domaine pour se connecter et publier des posts. ([Référence IndieMark Niveau 1](https://indieweb.org/IndieMark#Level_1)). L'*IndieMark Niveau 2* porte sur l'amélioration de l'identité personnelle, et **poster plusieurs types de posts sur votre propre site**, parmi lesquels il devrait y avoir des **[notes](https://indieweb.org/notes)** postées sur votre site au lieu de Twitter (puis de les [POSSEr](https://indieweb.org/POSSE) vers Twitter).
 
-L'IndieMark Niveau 2 porte sur l'amélioration de l'identité personnelle, et **poster plusieurs types de posts sur votre propre site**, parmi lesquels il devrait y avoir des **[notes](https://indieweb.org/notes)** postées sur votre site au lieu de Twitter (puis de les [POSSEr](https://indieweb.org/POSSE) vers  Twitter).
+##### Notes dans le menu 
+
+- Ajouter un lien notes. 
+- Structure de dossier à concevoir pour héberger de futurs échantillons de code liés au défi freecodecamp.
+
 
 
 
