r1d10 CSS avec Todd McLeod

--- a/content/post/r1d9.md
+++ b/content/post/r1d9.md
@@ -1,6 +1,6 @@
 ---
 title: "R1D9"
-subtitle: ""
+subtitle: "Découverte d'Emmet"
 date: 2017-08-01T06:35:24+02:00
 lastmod: 2017-08-01T12:33:03+02:00
 draft: false
@@ -17,22 +17,42 @@ Séance matinale, avant la chaleur
 - [Going Static with Hugo](https://www.michaelbromley.co.uk/blog/going-static-with-hugo/) - Michael Bromley (Vienne) - 2017-07-30 
 - [Ten Minutes of Go](https://zentechnista.github.io/2017/07/ten-minutes-of-go/)
 
-### Chantier HTML  
-#### <abbr title="integrated developement environment">IDE</abbr> HTML : Adoption de Webstorm + Emmet
+### <abbr title="integrated developement environment">IDE</abbr> : Emmet 
 
-Essai d'un nouvel environnement de dév avec des raccourcis-clavier à dompter de [emmet.io](https://emmet.io/). Téléchargé l'anti-sèche <https://docs.emmet.io/cheatsheet-a5.pdf> et pratique dans webstorm. 
+Essai d'un nouvel environnement de dév avec la syntaxe géniale à dompter de [emmet.io](https://emmet.io/). 
 
 ![syntaxe emmet](/img/syntaxe-emmet-child.png)
+
+Téléchargé l'anti-sèche <https://docs.emmet.io/cheatsheet-a5.pdf> et fait des premiers essais dans webstorm. En bref, si je tape dans mon éditeur la ligne du dessous 
+
+```
+div#page>div.logo+ul#navigation>li*5>a
+```
+
+et que je presse la touche <kbd>tab</kbd>, cela se transforme en : 
+
+```
+<div id="page">
+	<div class="logo"></div>
+	<ul id="navigation">
+		<li><a href=""></a></li>
+		<li><a href=""></a></li>
+		<li><a href=""></a></li>
+		<li><a href=""></a></li>
+		<li><a href=""></a></li>
+	</ul>
+```
+
+
 
 <!--
  - `h$[title=item$]{Titre $}*3 
  - ...  
 -->
 
-![raccourcis mac webstorm](/img/webstorm-ReferenceCardForMac.png)
 
 
-#### [Shortcode](https://gohugo.io/content-management/shortcodes) Hugo : ajouté CodePen
+### [Shortcode](https://gohugo.io/content-management/shortcodes) Hugo : ajouté CodePen
 
 [Repo source](https://github.com/jorinvo/hugo-shortcodes/blob/master/shortcodes/pen.html)
 
