add r1d12 : tribute page for freecodecamp

--- a/content/post/r1d9.md
+++ b/content/post/r1d9.md
@@ -4,7 +4,7 @@ subtitle: "Découverte d'Emmet"
 date: 2017-08-01T06:35:24+02:00
 lastmod: 2017-08-01T12:33:03+02:00
 draft: false
-tags: [Go,Hugo, IDE]
+tags: [Go,Hugo,IDE,codepen,shortcode]
 bigimg: [{src: "/img/path.jpg", desc: "Sur la Route"}]
 ---
 
