--- a/content/post/r1d20.md
+++ b/content/post/r1d20.md
@@ -1,7 +1,7 @@
 ---
-title: "R1d20 en couleurs"
+title: "r1d20 en couleurs"
 slug: "r1d20-couleurs"
-subtitle: ""
+subtitle: "en attendant de repeindre le thème"
 date: "2017-08-12T20:29:32+02:00"
 lastmod: 2017-08-13T10:05:30+02:00 
 draft: false
