hcard display: inline-block;

--- a/content/post/R1D8.md
+++ b/content/post/R1D8.md
@@ -8,6 +8,9 @@ tags: [bootstrap, date]
 bigimg: [{src: "/img/path.jpg", desc: "Sur la Route"}]
 ---
 
+8ème jour. FreeCodeCamp : initiation au responsive design. Aménagement de ce micro-site. Avec l'espoir de m'émanciper en HTML/CSS pour sortir des thèmes fondés sur Bootstrap.
+<!--more-->
+
 ### 1. FreeCodeCamp Responsive Design Bootstrap 
 
 - Terminé le tutoriel freecodecamp [Bootstrap Responsive Design](https://www.freecodecamp.org/map#nested-collapseResponsiveDesignwithBootstrap). 
@@ -50,11 +53,11 @@ bigimg: [{src: "/img/path.jpg", desc: "Sur la Route"}]
 
 
 ### 2. Travaux : dates et structure de dossiers
+
 #### 21. Dates en français
 
 Demain c'est le "**1er** août". 
-Poursuite de la mise en forme de la date.
-<!--more--> 
+Poursuite de la mise en forme de la date. 
 [Ajouter le suffixe 1er](https://discourse.gohugo.io/t/formatting-a-date-with-suffix-2nd/5701) 
 
 ```
