--- a/content/post/r1d27.md
+++ b/content/post/r1d27.md
@@ -5,17 +5,17 @@ lastmod: 2017-08-19T10:24:16+02:00
 draft: false
 ---
 
-**Statut du jour** : interruption des travaux sur ce sous-domaine. Retour sur <christopheducamp.com> pour une migration moteur GoHugo avec un thème minimaliste.
+Le Coudray-Macouard (Anjou). Météo superbe. 
 
+**Statut du jour** : interruption des travaux sur ce sous-domaine. Retour sur <https://christopheducamp.com> pour une migration moteur GoHugo avec le thème minimaliste `hugo-zen`.
 
-Le Coudray-Macouard. Météo superbe. 
-Travaux du jour : optimisation de [performance](https://www.dareboost.com/fr/report/5997f2290cf293cc52e24db3).
+**Travaux du jour :** optimisation de [performance](https://www.dareboost.com/fr/report/5997f2290cf293cc52e24db3).
 
 ![dareboost.com](https://monosnap.com/file/lbM0tWR3G7q453gGRiTl31ooF4cfBe.png)
 
 Posé sur le thème hugozen de [OCHIISHI Koichiro](https://github.com/rakuishi/hugo-zen)
 
-**GoHugo** : décision de délaisser ce site qui sera laissé en l'état. Difficultés rencontrées pour indiewebifier proprement le thème "Beautiful Hugo". Un thème que je juge complexe, surchargé de javascript et CSS.
+**GoHugo** : décision de délaisser ce site qui sera laissé en l'état. Trop de difficultés rencontrées pour [indiewebifier](https://indiewebify.me/) proprement le thème "Beautiful Hugo". Un thème que je juge complexe, surchargé de javascript et CSS.
 
 Sur les recommandations de [matjaz](https://matjaz.it/) dans son post "[Hugo Power User : make it web friendly part 1](https://matjaz.it/hugo-power-user-make-it-web-friendly-1/)" je migre aujourd'hui sur [hugo-zen](https://github.com/rakuishi/hugo-zen).
 
@@ -27,8 +27,12 @@ Si vous êtes un développeur web, vous aurez sûrement  de meilleures astuces q
 
 > Hugo Zen : toujours motorisé par le même générateur de site statique Hugo, 
 
-> Hugo Zen est un thème minimaliste basé sur le framewok Skeleton avec une `custom.css` de moins de 100 lignes. Il devrait me convenir pour apprendre à concevoir un thème personnalisé.
+> Hugo Zen est un thème minimaliste basé sur le framewok Skeleton avec une `custom.css` de moins de 100 lignes. 
 
-![screenshot hugo-zen](https://github.com/rakuishi/hugo-zen/blob/master/images/screenshot.png) 
+
+Il devrait me convenir pour apprendre à [personnaliser un thème Hugo](http://gohugo.io/themes/customizing/).
+
+Les travaux se poursuivront [ici sur mon domaine personnel](https://christopheducamp.com).
+
 
 
